# opaque

./: .headache-run  COPYRIGHT  Cargo.toml  DomainModeling.markdown  Gemfile  LICENSE  README.md  ToDo.md  headache.json
docs/specs/: SPEC_DIFF.md  draft-krawczyk-cfrg-opaque-03.txt  rfc9807.txt
src/: client.rs  envelope.rs  key_exchange.rs  lib.rs  opaque.rs  oprf.rs  sigma.rs
src/key_exchange/: mod.rs  sigma.rs  triple_dh.rs  triple_diffie.rs
tests/: opaque_test.rs  sample_run.txt
