[package]
name = "opaque"
version = "0.0.1"
authors = ["gustin <gustin@mycelium.dev>"]
edition = "2018"

[dependencies]
#ed25519-dalek = "1.0.0-pre.2"
curve25519-dalek = "2.0.0-alpha.1"
blake = "2.0.0"
ocelot = { git = "https://github.com/GaloisInc/ocelot.git", rev = "0.3.1" }
rand = "0.7.2"
rand_os = "0.2.2"
sha2 = "0.8.0"
