[package]
name = "opaque"
version = "0.0.1"
authors = ["gustin <gustin@mycelium.dev>"]
edition = "2018"

[features]
nightly = ["curve25519-dalek/nightly"]

[dependencies]
aes-gcm-siv = "0.2.1"
bincode = "1.2.0"
curve25519-dalek = "1.2.3"
ed25519-dalek = "1.0.0-pre.1"
hex = "0.4.0"
hkdf = "0.8.0"
hmac = "0.7.1"
lazy_static = "1.4.0"
rand_chacha = "0.2.1"
rand_core = "0.3.1"
rand_os = { version = "0.1.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.2"
sha2 = "0.8.0"
sha3 = "0.8.2"
typenum = "1.11.2"
